<resources>
    <string name="app_name">WanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    // nav_bottom
    <string name="home">Home</string>
    <string name="hierarchy">Hierarchy</string>
    <string name="wx_article">WXArticle</string>
    <string name="project">Project</string>
    
    // nav_view
    <string name="my_points">Points</string>
    <string name="favorites">Favorites</string>
    <string name="trend">Trend</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">logout</string>
    
    // toolbar_menu
    <string name="action_search">Search</string>
    <string name="action_websites">Websites</string>

    // item_article
    <string name="article_fresh">New</string>
    <string name="article_top">Top</string>

    // article_detail
    <string name="open_with_browser">Open with browser</string>
    <string name="share">Share</string>

    // others
    <string name="contentDescription_favorite">Favorite article</string>
    <string name="write_permission_rejected">Failed to get write permission</string>

    // login
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="go_login">Login</string>
    <string name="go_register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username_not_empty">Username cannot be empty</string>
    <string name="password_not_empty">Password cannot be empty</string>

    <string name="empty_view_hint">No data</string>
    <string name="error_view_hint">Failed to load</string>
    <string name="collect_success">Collect success</string>
    <string name="cancel_collect">Cancel Collect</string>
    <string name="login_first">Please login first</string>

    // setting
    <string name="cache_setting">Cache Setting</string>
    <string name="clear_cache">Clear Cache</string>

</resources>
