<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_article_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_marginEnd="5dp"
                    tools:text="鸿洋"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_article_fresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_top"
                    android:layout_marginEnd="5dp"
                    android:layout_toEndOf="@id/tv_article_author"
                    android:layout_centerVertical="true"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="2dp"
                    android:visibility="gone"
                    android:text="@string/article_fresh"
                    android:textColor="@color/bg_top"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_article_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_article_fresh"
                    android:background="@drawable/bg_tag"
                    android:layout_centerVertical="true"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="2dp"
                    android:textColor="@color/bg_tags"
                    android:textSize="12sp"
                    tools:text="问答"/>


                <TextView
                    android:id="@+id/tv_article_niceDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    tools:text="10h ago"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" >

                <ImageView
                    android:id="@+id/envelopePic"
                    android:layout_width="100dp"
                    android:layout_height="75dp"
                    android:layout_marginEnd="5dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_placeholder"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/tv_article_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/envelopePic"
                    tools:text="面试经常问的Handler机制"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/tv_article_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_top"
                    android:layout_marginEnd="5dp"
                    android:layout_centerVertical="true"
                    android:paddingStart="4dp"
                    android:paddingTop="2dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="2dp"
                    android:visibility="gone"
                    android:text="@string/article_top"
                    android:textColor="@color/bg_top"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_article_chapterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tv_article_top"
                    android:layout_centerVertical="true"
                    tools:text="常用控件·常用UI控件"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <ImageView
                    android:id="@+id/article_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/ic_heart"
                    android:contentDescription="@string/contentDescription_favorite" />
            </RelativeLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    
</LinearLayout>